src/test/ui/impl-trait/bindings.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may cause the compiler to crash
  --> $DIR/bindings.rs:1:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:5:29
   |
LL |     const foo: impl Clone = x;
   |                             ^ non-constant value

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:11:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^ non-constant value

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:18:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^ non-constant value

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:25:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^ non-constant value

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0435`.
